--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "device-tracker-frontend",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Device tracking system",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -12,8 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-leaflet": "^4.2.1",
-    "leaflet": "^1.9.4"
+    "react-router-dom": "^6.15.0",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
   },
   "browserslist": {
     "production": [
