--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,25 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-.pnp.cjs
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.staging.local
-
+# Dependencies
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDE
+# Production builds
+build/
+dist/
+
+# Environment variables
+.env
+.env.local
+
+# IDE files
 .vscode/
 .idea/
 
-# OS
+# OS files
+.DS_Store
 Thumbs.db
+
+# Logs
+logs
+*.log
