--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
 # Dependencies
 node_modules/
 npm-debug.log*
@@ -7,10 +14,6 @@ yarn-error.log*
 # Production builds
 build/
 dist/
-
-# Environment variables
-.env
-.env.local
 
 # IDE files
 .vscode/
@@ -23,3 +26,6 @@ Thumbs.db
 # Logs
 logs
 *.log
+
+# Auto detect text files and perform LF normalization
+* text=auto
