--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "react-scripts start",
+    "start:local": "REACT_APP_ENV=local react-scripts start",
+    "build:prod": "REACT_APP_ENV=production react-scripts build"
   },
   "dependencies": {
     "react": "^18.2.0",
